--- a/vues/profil.ejs
+++ b/vues/profil.ejs
@@ -13,9 +13,7 @@
     <%- include("header_connected") %>
     <div class="body">
         <div class="create-robot skill-ligne">
-    <!--<a href="/game/<%= robot.id_users %>/<%= robot.id_robots %>/"></a>-->
-
-            <div class="skills-ligne selectrobot">
+            <div class="skills-ligne selectrobot profil-robot">
                 <div>
                     <img src="<%= robot.img %>" class="imgrobot">
                     <div><strong>Nickname</strong> : <%= robot.nickname %></div>
